--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/externalsecret.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/externalsecret.yaml
@@ -106,20 +106,18 @@ spec:
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: oauth2-proxy
-  namespace: oauth2-proxy
+  name: dex-pocket-id
+  namespace: auth
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword
   target:
-    creationPolicy: Merge
-    name: oauth2-proxy
+    name: dex-pocket-id
     template:
       data:
-        client-id: "{{ .KUBEFLOW_OIDC_CLIENT_ID }}"
-        client-secret: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
-        cookie-secret: "{{ .KUBEFLOW_OAUTH2_PROXY_COOKIE_SECRET }}"
+        clientId: "{{ .KUBEFLOW_OIDC_CLIENT_ID }}"
+        clientSecret: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
   dataFrom:
     - extract:
         key: kubeflow
