--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
@@ -205,6 +205,11 @@ configMapGenerator:
     behavior: replace
     files:
       - oauth2_proxy.cfg=./resources/oauth2_proxy.cfg
+  - name: dex-pocket-id
+    namespace: auth
+    behavior: replace
+    files:
+      - config.yaml=./resources/dex/config.yaml
 
 secretGenerator:
   - name: oauth2-proxy
