--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
@@ -38,13 +38,16 @@ components:
   - ./upstream/common/oauth2-proxy/components/central-dashboard/
 
 resources:
+  # ClusterIssuer
+  - ./upstream/common/cert-manager/kubeflow-issuer/base
+
   # Istio
   - ./upstream/common/istio-1-24/istio-crds/base
   - ./upstream/common/istio-1-24/istio-namespace/base
   - ./upstream/common/istio-1-24/istio-install/overlays/oauth2-proxy
 
-  # ClusterIssuer
-  - ./upstream/common/cert-manager/kubeflow-issuer/base
+  # Dex
+  - ../common/dex/overlays/oauth2-proxy
 
   # oauth2-proxy
   - ./upstream/common/oauth2-proxy/overlays/m2m-dex-and-kind
