--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
@@ -47,7 +47,7 @@ resources:
   - ./upstream/common/istio-1-24/istio-install/overlays/oauth2-proxy
 
   # Dex
-  - ../common/dex/overlays/oauth2-proxy
+  - ./upstream/common/dex/overlays/oauth2-proxy
 
   # oauth2-proxy
   - ./upstream/common/oauth2-proxy/overlays/m2m-dex-and-kind
