chore(kubeflow): add dex jwt patch

--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
@@ -106,6 +106,7 @@ patches:
     target:
       name: dex-jwt
       namespace: auth
+      kind: RequestAuthentication
 
   # istio
   - path: ./patches/istio/patch.istio-sidecar-injector.configmap.yaml
