--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/kustomization.yaml
@@ -211,7 +211,7 @@ configMapGenerator:
     behavior: replace
     files:
       - oauth2_proxy.cfg=./resources/oauth2_proxy.cfg
-  - name: dex-pocket-id
+  - name: dex
     namespace: auth
     behavior: replace
     files:
