--- a/kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/katib/patch.katib-db-manager.deployment.yaml
+++ b/kubernetes/apps/kubeflow-system/kubeflow/manifests/patches/katib/patch.katib-db-manager.deployment.yaml
@@ -7,8 +7,7 @@ spec:
   template:
     spec:
       containers:
-        - command:
-            - ./katib-db-manager
+        - name: katib-db-manager
           env:
             - name: DB_NAME
               value: mariadb.database.svc.cluster.local
