fix(rreading-glasses): add container command

--- a/kubernetes/apps/default/rreading-glasses/app/helmrelease.yaml
+++ b/kubernetes/apps/default/rreading-glasses/app/helmrelease.yaml
@@ -34,6 +34,7 @@ spec:
             image:
               repository: blampe/rreading-glasses
               tag: hardcover@sha256:6ac52590a6e207b0839e05663a7d8c0760da7a48b245847d8b10d3fc4ca9699f
+            command: ["/main", "serve"]
             args:
               - --upstream="hardcover.app"
               - --hardcover-auth="$(RREADING_GLASSES_HARDCOVER_API_KEY)"
