feat(kubeflow): add model_registry database

--- a/kubernetes/apps/database/mariadb/cluster/databases/kubeflow/database.yaml
+++ b/kubernetes/apps/database/mariadb/cluster/databases/kubeflow/database.yaml
@@ -41,4 +41,14 @@ spec:
     name: mariadb
   characterSet: utf8
   collate: utf8_general_ci
-
+---
+apiVersion: k8s.mariadb.com/v1alpha1
+kind: Database
+metadata:
+  name: model-registry
+spec:
+  name: model_registry
+  mariaDbRef:
+    name: mariadb
+  characterSet: utf8
+  collate: utf8_general_ci
