--- a/kubernetes/apps/knative-eventing/kustomization.yaml
+++ b/kubernetes/apps/knative-eventing/kustomization.yaml
@@ -4,4 +4,5 @@ kind: Kustomization
 components:
   - ../../components/common
 resources:
-  - ./knative-serving/ks.yaml
+  - ./knative-eventing/ks.yaml
+
