--- a/kubernetes/apps/knative-serving/kustomization.yaml
+++ b/kubernetes/apps/knative-serving/kustomization.yaml
@@ -1,7 +1,9 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+namespace: knative-serving
 components:
   - ../../components/common
 resources:
   - ./knative-serving/ks.yaml
+
