--- a/kubernetes/apps/knative-eventing/knative-eventing/app/kustomization.yaml
+++ b/kubernetes/apps/knative-eventing/knative-eventing/app/kustomization.yaml
@@ -4,3 +4,10 @@ kind: Kustomization
 resources:
   - ../../../../../third_party/kubeflow/manifests/common/knative/knative-eventing/base/kustomization.yaml
   - ../../../../../third_party/kubeflow/manifests/common/knative/knative-eventing/base/upstream/mt-channel-broker.yaml
+patches:
+  - patch: |-
+      $patch: delete
+      apiVersion: v1
+      kind: namespace
+      metadata:
+        name: knative-eventing
