--- a/kubernetes/apps/kubeflow/core/profiles/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/core/profiles/kustomization.yaml
@@ -2,7 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 components:
-  - ../../../../components/kubeflow-profile
+  - ../../../../../third_party/kubeflow/manifests/experimental/security/PSS/dynamic/restricted
 resources:
   - ./profile.yaml
-  - ../../../../../third_party/kubeflow/manifests/apps/model-registry/upstream/options/istio/kustomization.yaml
