--- a/kubernetes/apps/auth/dex/ks.yaml
+++ b/kubernetes/apps/auth/dex/ks.yaml
@@ -4,7 +4,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app dex
-  namespace: &namespace dex
+  namespace: &namespace auth
 spec:
   commonMetadata:
     labels:
@@ -13,7 +13,7 @@ spec:
     - name: istiod
       namespace: istio-system
   interval: 1h
-  path: ./kubernetes/apps/dex/dex/app
+  path: ./kubernetes/apps/auth/dex/app
   prune: true
   retryInterval: 2m
   sourceRef:
