--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
@@ -46,5 +46,5 @@ spec:
               readOnly: true
       volumes:
         - name: oauth2-proxy-config
-          secret:
-            secretName: oauth2-proxy-secret
+          configMap:
+            name: oauth2-proxy
