--- a/kubernetes/apps/kubeflow/profile-controller/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/profile-controller/app/kustomization.yaml
@@ -1,5 +1,7 @@
 # yaml-language-server: $schema=https://json.schemastore.org/kustomization
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
+components:
+  - ../../../../../third_party/kubeflow/manifests/experimental/security/PSS/dynamic/restricted
 resources:
   - ../../../../../third_party/kubeflow/manifests/apps/profiles/upstream/overlays/kubeflow
