--- a/kubernetes/apps/kubeflow/notebooks/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/notebooks/app/kustomization.yaml
@@ -2,4 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ../../../../../third_party/kubeflow/manifests/apps/jupyter/notebook-controller/upstream/overlays/kubeflow
   - ../../../../../third_party/kubeflow/manifests/apps/jupyter/jupyter-web-app/upstream/overlays/istio
