--- a/kubernetes/apps/kubeflow/tensorboards/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/tensorboards/app/kustomization.yaml
@@ -2,4 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ../../../../../third_party/kubeflow/manifests/apps/tensorboard/tensorboard-controller/upstream/overlays/kubeflow
   - ../../../../../third_party/kubeflow/manifests/apps/tensorboard/tensorboards-web-app/upstream/overlays/istio
