--- a/kubernetes/apps/kubeflow/volumes/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/volumes/app/kustomization.yaml
@@ -2,4 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - ../../../../../third_party/kubeflow/manifests/apps/volumes-web-app/upstream/overlays/istio
   - ../../../../../third_party/kubeflow/manifests/apps/pvcviewer-controller/upstream/base
