--- a/kubernetes/apps/auth/dex/app/patches/patch.dex.deployment.yaml
+++ b/kubernetes/apps/auth/dex/app/patches/patch.dex.deployment.yaml
@@ -8,3 +8,16 @@ spec:
     metadata:
       annotations:
         reloader.stakater.com/auto: "true"
+    spec:
+      containers:
+        - name: dex
+          envFrom: []
+          $patch: delete
+          volumeMounts:
+            - mountPath: /etc/dex/cfg
+              name: config
+              readOnly: true
+      volumes:
+        - name: config
+          secret:
+            secretName: dex-secret
