--- a/kubernetes/apps/auth/dex/app/externalsecret.yaml
+++ b/kubernetes/apps/auth/dex/app/externalsecret.yaml
@@ -29,24 +29,24 @@ spec:
             format: text
 
           expiry:
-            ## the duration of time for which the DeviceRequests will be valid
+            # the duration of time for which the DeviceRequests will be valid
             deviceRequests: "5m"
 
-            ## the duration of time for which the IdTokens will be valid
+            # the duration of time for which the IdTokens will be valid
             idTokens: "1h"
 
-            ## the duration of time after which the SigningKeys will be rotated
+            # the duration of time after which the SigningKeys will be rotated
             signingKeys: "6h"
 
-            ## refresh tokens expiry policy
+            # refresh tokens expiry policy
             refreshTokens:
-              ## get the same refresh token from refresh endpoint within this interval
+              # get the same refresh token from refresh endpoint within this interval
               reuseInterval: "30s"
 
-              ## max time since last use of a refresh token
+              # max time since last use of a refresh token
               validIfNotUsedFor: "168h" # 7d
 
-              ##  max total lifetime of a refresh token
+              #  max total lifetime of a refresh token
               absoluteLifetime: "2160h" # 90d
 
           oauth2:
