fix(kubeflow): update dex deployment patch

--- a/kubernetes/apps/auth/dex/app/patches/patch.dex.deployment.yaml
+++ b/kubernetes/apps/auth/dex/app/patches/patch.dex.deployment.yaml
@@ -12,12 +12,9 @@ spec:
       containers:
         - name: dex
           envFrom: []
-          $patch: delete
-          volumeMounts:
-            - mountPath: /etc/dex/cfg
-              name: config
-              readOnly: true
       volumes:
+        - name: config
+          $patch: delete
         - name: config
           secret:
             secretName: dex-secret
