fix(kubeflow): set env value empty so valueFrom can be used

--- a/kubernetes/apps/kubeflow/katib/app/patches/patch.katib-db-manager.deployment.yaml
+++ b/kubernetes/apps/kubeflow/katib/app/patches/patch.katib-db-manager.deployment.yaml
@@ -10,6 +10,7 @@ spec:
         - name: katib-db-manager
           env:
             - name: DB_NAME
+              value: ""
               valueFrom:
                 secretKeyRef:
                   name: kubeflow-secret
