--- a/kubernetes/apps/knative-eventing/knative-eventing/app/kustomization.yaml
+++ b/kubernetes/apps/knative-eventing/knative-eventing/app/kustomization.yaml
@@ -2,5 +2,5 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ../../../../../third_party/kubeflow/manifests/common/knative/knative-eventing/base/kustomization.yaml
+  - ../../../../../third_party/kubeflow/manifests/common/knative/knative-eventing/base/
   - ../../../../../third_party/kubeflow/manifests/common/knative/knative-eventing/base/upstream/mt-channel-broker.yaml
