fix(kubeflow): update patch

--- a/kubernetes/apps/auth/dex/app/patches/patch.dex.deployment.yaml
+++ b/kubernetes/apps/auth/dex/app/patches/patch.dex.deployment.yaml
@@ -14,5 +14,6 @@ spec:
           envFrom: []
       volumes:
         - name: config
+          configMap: {}
           secret:
             secretName: dex-secret
