--- a/kubernetes/apps/kubeflow/pipelines/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/pipelines/app/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
 patchesStrategicMerge:
   # NOTE: must be patched to replace existing configmaps
   # Placed in app directory for visibility
-  - ./configmap.yaml
+  - configmap.yaml
   - patches/patch.cache-server.deployment.yaml
   - patches/patch.metadata-grpc-deployment.deployment.yaml
   - patches/patch.ml-pipeline-persistenceagent.deployment.yaml
@@ -15,4 +15,3 @@ patchesStrategicMerge:
   # removals
   - patches/removals/mysql.yaml
   - patches/removals/minio.yaml
-  - patches/removals/configmap.yaml
