fix(kubeflow): add profiles

--- a/kubernetes/apps/kubeflow/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/kustomization.yaml
@@ -6,6 +6,7 @@ components:
   - ../../components/kubeflow
 resources:
   - ./core/ks.yaml
+  - ./profiles/ks.yaml
   - ./pipelines/ks.yaml
   - ./katib/ks.yaml
   - ./centraldashboard/ks.yaml
