--- a/kubernetes/apps/auth/dex/app/externalsecret.yaml
+++ b/kubernetes/apps/auth/dex/app/externalsecret.yaml
@@ -72,8 +72,8 @@ spec:
               name: Pocket ID
               config:
                 issuer: https://id.goyangi.cloud
-                clientID: "{{ .KUBEFLOW_CLIENT_ID }}"
-                clientSecret: "{{ .KUBEFLOW_CLIENT_SECRET }}"
+                clientID: "{{ .KUBEFLOW_OIDC_CLIENT_ID }}"
+                clientSecret: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
                 redirectURI: https://kubeflow.goyangi.cloud/dex/callback
 
             - type: oidc
