--- a/kubernetes/apps/kubeflow/core/config/externalsecret.yaml
+++ b/kubernetes/apps/kubeflow/core/config/externalsecret.yaml
@@ -28,6 +28,7 @@ spec:
         KUBEFLOW_MODEL_REGISTRY_MYSQL_HOST: mariadb.database.svc.cluster.local
         KUBEFLOW_MODEL_REGISTRY_MYSQL_PORT: "3306"
         KUBEFLOW_OAUTH2_PROXY_COOKIE_SECRET: "{{ .KUBEFLOW_OAUTH2_PROXY_COOKIE_SECRET }}"
+        KUBEFLOW_USERID_HEADER: kubeflow-userid
   dataFrom:
     - extract:
         key: mariadb
