feat(kubeflow): add oauth2-proxy external secret

--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
@@ -15,12 +15,12 @@ spec:
             - name: OAUTH2_PROXY_CLIENT_SECRET
               valueFrom:
                 secretKeyRef:
-                  name: kubeflow-secret
+                  name: oauth2-proxy-secret
                   key: KUBEFLOW_OIDC_CLIENT_SECRET
             - name: OAUTH2_PROXY_COOKIE_SECRET
               valueFrom:
                 secretKeyRef:
-                  name: kubeflow-secret
+                  name: oauth2-proxy-secret
                   key: KUBEFLOW_OAUTH2_PROXY_COOKIE_SECRET
           command:
             - "oauth2-proxy"
