--- a/kubernetes/apps/auth/dex/app/patches/patch.dex.deployment.yaml
+++ b/kubernetes/apps/auth/dex/app/patches/patch.dex.deployment.yaml
@@ -20,6 +20,8 @@ spec:
               subPath: config.yaml
               readOnly: true
       volumes:
+        - name: dex
+          $patch: delete
         - name: dex-config
           secret:
             secretName: dex-secret
