feat(kubeflow): annotate all deployments with reloader

--- a/kubernetes/apps/kubeflow/centraldashboard/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/centraldashboard/app/kustomization.yaml
@@ -5,3 +5,16 @@ resources:
   - ../../../../../third_party/kubeflow/manifests/apps/centraldashboard/overlays/oauth2-proxy
 patchesStrategicMerge:
   - patches/patch.centraldashboard-config.configmap.yaml
+patches:
+  - target:
+      kind: Deployment
+    patch: |
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: this-is-ignored
+      spec:
+        template:
+          metadata:
+            annotations:
+              reloader.stakater.com/auto: true
