--- a/kubernetes/apps/kubeflow/profiles/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/profiles/app/kustomization.yaml
@@ -5,3 +5,16 @@ components:
   - ../../../../../third_party/kubeflow/manifests/experimental/security/PSS/dynamic/restricted
 resources:
   - ../../../../../third_party/kubeflow/manifests/apps/profiles/upstream/overlays/kubeflow
+patches:
+  - target:
+      kind: Deployment
+    patch: |
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: this-is-ignored
+      spec:
+        template:
+          metadata:
+            annotations:
+              reloader.stakater.com/auto: true
