--- a/kubernetes/apps/auth/dex/app/kustomization.yaml
+++ b/kubernetes/apps/auth/dex/app/kustomization.yaml
@@ -8,3 +8,16 @@ patchesStrategicMerge:
   - patches/patch.dex.deployment.yaml
   # removals
   - patches/removals/dex.yaml
+patches:
+  - target:
+      kind: Deployment
+    patch: |
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: this-is-ignored
+      spec:
+        template:
+          metadata:
+            annotations:
+              reloader.stakater.com/auto: true
