--- a/kubernetes/apps/kubeflow/kserve/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/kserve/app/kustomization.yaml
@@ -4,3 +4,16 @@ kind: Kustomization
 resources:
   - ../../../../../third_party/kubeflow/manifests/apps/kserve/kserve
   - ../../../../../third_party/kubeflow/manifests/apps/kserve/models-web-app/overlays/kubeflow
+patches:
+  - target:
+      kind: Deployment
+    patch: |
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: this-is-ignored
+      spec:
+        template:
+          metadata:
+            annotations:
+              reloader.stakater.com/auto: true
