--- a/kubernetes/apps/kubeflow/tensorboards/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/tensorboards/app/kustomization.yaml
@@ -4,3 +4,16 @@ kind: Kustomization
 resources:
   - ../../../../../third_party/kubeflow/manifests/apps/tensorboard/tensorboard-controller/upstream/overlays/kubeflow
   - ../../../../../third_party/kubeflow/manifests/apps/tensorboard/tensorboards-web-app/upstream/overlays/istio
+patches:
+  - target:
+      kind: Deployment
+    patch: |
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: this-is-ignored
+      spec:
+        template:
+          metadata:
+            annotations:
+              reloader.stakater.com/auto: true
