--- a/kubernetes/apps/kubeflow/volumes/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/volumes/app/kustomization.yaml
@@ -4,3 +4,16 @@ kind: Kustomization
 resources:
   - ../../../../../third_party/kubeflow/manifests/apps/volumes-web-app/upstream/overlays/istio
   - ../../../../../third_party/kubeflow/manifests/apps/pvcviewer-controller/upstream/base
+patches:
+  - target:
+      kind: Deployment
+    patch: |
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: this-is-ignored
+      spec:
+        template:
+          metadata:
+            annotations:
+              reloader.stakater.com/auto: true
