--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/kustomization.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/kustomization.yaml
@@ -21,4 +21,4 @@ patches:
         template:
           metadata:
             annotations:
-              reloader.stakater.com/auto: true
+              reloader.stakater.com/auto: "true"
