--- a/kubernetes/apps/kubeflow/centraldashboard/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/centraldashboard/app/kustomization.yaml
@@ -17,4 +17,4 @@ patches:
         template:
           metadata:
             annotations:
-              reloader.stakater.com/auto: true
+              reloader.stakater.com/auto: "true"
