--- a/kubernetes/apps/kubeflow/model-registry/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/model-registry/app/kustomization.yaml
@@ -22,5 +22,4 @@ patches:
         template:
           metadata:
             annotations:
-              reloader.stakater.com/auto: true
-
+              reloader.stakater.com/auto: "true"
