--- a/kubernetes/apps/kubeflow/pipelines/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/pipelines/app/kustomization.yaml
@@ -27,4 +27,4 @@ patches:
         template:
           metadata:
             annotations:
-              reloader.stakater.com/auto: true
+              reloader.stakater.com/auto: "true"
