--- a/kubernetes/apps/kubeflow/spark/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/spark/app/kustomization.yaml
@@ -15,4 +15,4 @@ patches:
         template:
           metadata:
             annotations:
-              reloader.stakater.com/auto: true
+              reloader.stakater.com/auto: "true"
