--- a/kubernetes/apps/knative-eventing/knative-eventing/app/kustomization.yaml
+++ b/kubernetes/apps/knative-eventing/knative-eventing/app/kustomization.yaml
@@ -4,3 +4,16 @@ kind: Kustomization
 resources:
   - ../../../../../third_party/kubeflow/manifests/common/knative/knative-eventing/base/
   - ../../../../../third_party/kubeflow/manifests/common/knative/knative-eventing/base/upstream/mt-channel-broker.yaml
+patches:
+  - target:
+      kind: Deployment
+    patch: |
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: this-is-ignored
+      spec:
+        template:
+          metadata:
+            annotations:
+              reloader.stakater.com/auto: "true"
