--- a/kubernetes/apps/knative-serving/knative-serving/app/kustomization.yaml
+++ b/kubernetes/apps/knative-serving/knative-serving/app/kustomization.yaml
@@ -3,3 +3,16 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - ../../../../../third_party/kubeflow/manifests/common/knative/knative-serving/overlays/gateways
+patches:
+  - target:
+      kind: Deployment
+    patch: |
+      apiVersion: apps/v1
+      kind: Deployment
+      metadata:
+        name: this-is-ignored
+      spec:
+        template:
+          metadata:
+            annotations:
+              reloader.stakater.com/auto: "true"
