fix(kubeflow): update config

--- a/kubernetes/apps/auth/dex/app/externalsecret.yaml
+++ b/kubernetes/apps/auth/dex/app/externalsecret.yaml
@@ -76,7 +76,7 @@ spec:
                 clientSecret: "{{ .KUBEFLOW_OIDC_CLIENT_SECRET }}"
                 redirectURI: https://kubeflow.goyangi.cloud/dex/callback
 
-            - type: oidc
+            - type: github
               id: github
               name: GitHub
               config:
