--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/kustomization.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/kustomization.yaml
@@ -2,13 +2,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./configmap.yaml
   - ./externalsecret.yaml
   - ../../../../../third_party/kubeflow/manifests/common/oauth2-proxy/overlays/m2m-dex-and-kind
 patchesStrategicMerge:
   - patches/patch.oauth2-proxy.deployment.yaml
-  # removals
-  - patches/removals/oauth2-proxy.yaml
+  - configmap.yaml
 patches:
   - target:
       kind: Deployment
