--- a/kubernetes/apps/kubeflow/pipelines/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/pipelines/app/kustomization.yaml
@@ -12,6 +12,7 @@ patchesStrategicMerge:
   - patches/patch.ml-pipeline-persistenceagent.deployment.yaml
   - patches/patch.ml-pipeline-ui.deployment.yaml
   - patches/patch.ml-pipeline.deployment.yaml
+  - patches/patch.kubeflow-pipelines-profile-controller.deployment.yaml
   # removals
   - patches/removals/mysql.yaml
   - patches/removals/minio.yaml
