fix(kubeflow): update config

--- a/kubernetes/apps/kubeflow/pipelines/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/pipelines/app/kustomization.yaml
@@ -16,6 +16,11 @@ patchesStrategicMerge:
   # removals
   - patches/removals/mysql.yaml
   - patches/removals/minio.yaml
+configMapGenerator:
+  - name: ml-pipeline-ui-configmap
+    behavior: merge
+    files:
+      - resources/viewer-pod-template.json
 patches:
   - target:
       kind: Deployment
