--- a/kubernetes/apps/kubeflow/pipelines/app/configmap.yaml
+++ b/kubernetes/apps/kubeflow/pipelines/app/configmap.yaml
@@ -4,17 +4,33 @@ kind: ConfigMap
 metadata:
   name: pipeline-install-config
 data:
+  warning: ""
+  # Legacy
+  dbHost: mariadb.database.svc.cluster.local
+  dbPort: "3306"
+  # App Config
   appName: pipeline
+  cronScheduleTimezone: "Australia/Sydney"
+  # Workflow Image Config
+  launcherImage: ghcr.io/kubeflow/kfp-launcher
+  driverImage: ghcr.io/kubeflow/kfp-driver
+  # Cache Config
+  cacheImage: registry.k8s.io/busybox
+  # Bucket Config
+  bucketName: kfp-pipelines
+  bucketRegion: "us-east-1"
+  # Object Store Config
+  bucketHost: minio.default.svc.cluster.local
+  bucketSecure: false
+  bucketPort: "9000"
+  # MySQL Config
   dbType: mysql
   mysqlHost: mariadb.database.svc.cluster.local
   mysqlPort: "3306"
-  dbHost: mariadb.database.svc.cluster.local
-  dbPort: "3306"
   mlmdDb: kfp_metadata
   cacheDb: kfp_cache
   pipelineDb: kfp_pipelines
-  bucketName: kfp-pipelines
-  cronScheduleTimezone: "Australia/Sydney"
+  # UserID Config
   USERID_HEADER: kubeflow-userid
   USERID_PREFIX: ""
 ---
@@ -36,3 +52,47 @@ data:
       secretKeySecret:
         name: kubeflow-secret
         key: KUBEFLOW_PIPELINES_SECRET_ACCESS_KEY
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: ml-pipeline-ui-configmap
+data:
+  viewer-pod-template: |
+    {
+      "spec": {
+        "serviceAccountName": "default-editor",
+        "containers": [
+          {
+            "env": [
+              {
+                "name": "AWS_REGION",
+                "value": "us-east-1"
+              },
+              {
+                "name": "S3_ENDPOINT",
+                "value": "http://minio.default.svc.cluster.local:9000"
+              },
+              {
+                "name": "AWS_ACCESS_KEY_ID",
+                "valueFrom": {
+                  "secretKeyRef": {
+                    "name": "kubeflow-secret",
+                    "key": "KUBEFLOW_PIPELINES_ACCESS_KEY_ID"
+                  }
+                }
+              },
+              {
+                "name": "AWS_SECRET_ACCESS_KEY",
+                "valueFrom": {
+                  "secretKeyRef": {
+                    "name": "kubeflow-secret",
+                    "key": "KUBEFLOW_PIPELINES_SECRET_ACCESS_KEY"
+                  }
+                }
+              }
+            ]
+          }
+        ]
+      }
+    }
