--- a/kubernetes/apps/auth/dex/app/externalsecret.yaml
+++ b/kubernetes/apps/auth/dex/app/externalsecret.yaml
@@ -12,7 +12,7 @@ spec:
     template:
       data:
         config.yaml: |
-          issuer: https://kubeflow.goyangi.cloud/dex
+          issuer: http://dex.auth.svc.cluster.local:5556
           storage:
             type: kubernetes
             config:
