--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/configmap.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/configmap.yaml
@@ -5,7 +5,7 @@ metadata:
   name: oauth2-proxy-parameters
 spec:
   data:
-    FORCE_HTTPS: false
+    FORCE_HTTPS: true
     ALLOW_SELF_SIGNED_ISSUER: false
     ENABLE_M2M_TOKENS: true
     EXTRA_JWT_ISSUERS: https://kubernetes.default.svc.cluster.local=https://kubernetes.default.svc.cluster.local
