--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
@@ -25,6 +25,8 @@ spec:
           command:
             - "oauth2-proxy"
             - "--config=/etc/oauth2-proxy/oauth2-proxy.cfg"
+            - "--http-address=0.0.0.0:4180"
+          args: []
           ports:
             - name: http
               containerPort: 4180
