--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
@@ -25,7 +25,6 @@ spec:
           command:
             - "oauth2-proxy"
             - "--config=/etc/oauth2-proxy/oauth2-proxy.cfg"
-            - "--http-address=0.0.0.0:4180"
           args: []
           ports:
             - name: http
@@ -48,5 +47,5 @@ spec:
               readOnly: true
       volumes:
         - name: oauth2-proxy-config
-          configMap:
+          secret:
             name: oauth2-proxy
