fix(kubeflow): update config

--- a/kubernetes/apps/kubeflow/pipelines/app/kustomization.yaml
+++ b/kubernetes/apps/kubeflow/pipelines/app/kustomization.yaml
@@ -15,7 +15,7 @@ patchesStrategicMerge:
   - patches/removals/minio.yaml
 configMapGenerator:
   - name: pipeline-install-config
-    behavior: replace
+    behavior: merge
     literals:
       - warning=
         # Legacy
