fix(kubeflow): update config

--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
@@ -42,5 +42,6 @@ spec:
               port: http
       volumes:
         - name: oauth2-proxy-config
+          $patch: replace
           secret:
             name: oauth2-proxy-config-secret
