fix(kubeflow): update config

--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
@@ -40,6 +40,12 @@ spec:
             httpGet:
               path: /ready
               port: http
+          volumeMounts:
+            - name: oauth2-proxy-config
+              $patch: replace
+              mountPath: /etc/oauth2-proxy/oauth2-proxy.cfg
+              subPath: oauth2-proxy.cfg
+              readOnly: true
       volumes:
         - name: oauth2-proxy-config
           $patch: replace
