fix(kubeflow): update config

--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
@@ -48,6 +48,7 @@ spec:
               readOnly: true
       volumes:
         - name: oauth2-proxy-config
-          $patch: replace
+          configMap:
+            $patch: delete
           secret:
             name: oauth2-proxy-config-secret
