--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
@@ -42,11 +42,10 @@ spec:
               port: http
           volumeMounts:
             - name: oauth2-proxy-config
-              $patch: replace
               mountPath: /etc/oauth2-proxy/oauth2-proxy.cfg
               subPath: oauth2-proxy.cfg
               readOnly: true
       volumes:
         - name: oauth2-proxy-config
           secret:
-            name: oauth2-proxy-config-secret
+            secretName: oauth2-proxy-config-secret
