fix(kubeflow): update config

--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/patches/patch.oauth2-proxy.deployment.yaml
@@ -47,6 +47,7 @@ spec:
               readOnly: true
       volumes:
         - name: oauth2-proxy-config
-          configMap: null
+          configMap:
+            $patch: delete
           secret:
             secretName: oauth2-proxy-config-secret
