fix(kubeflow): update config

--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/externalsecret.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/externalsecret.yaml
@@ -82,7 +82,7 @@ spec:
           ###############
           # upstream headers (to dex)
           ###############
-          ## pass headers: `Authorization`
+          # pass headers: `Authorization`
           pass_authorization_header = false
 
           # pass headers: HTTP Basic Auth, `X-Forwarded-User`, `X-Forwarded-Email`
@@ -155,7 +155,7 @@ spec:
           ###############
           # cookie
           ###############
-          cookie_name = oauth2_proxy_kubeflow
+          cookie_name = "oauth2_proxy_kubeflow"
           cookie_path = "/"
           cookie_domains = []
           cookie_expire = "24h"
