--- a/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/externalsecret.yaml
+++ b/kubernetes/apps/oauth2-proxy/oauth2-proxy/app/externalsecret.yaml
@@ -121,7 +121,7 @@ spec:
           #       https://dexidp.io/docs/connectors/
           scope = "openid email groups profile offline_access"
 
-          oidc_issuer_url = "https://kubeflow.goyangi.cloud/dex"
+          oidc_issuer_url = "https://kubeflow.goyangi.cloud/dex/"
           redirect_url = "https://kubeflow.goyangi.cloud/oauth2/callback"
 
           email_domains = ["*"]
