--- a/kubernetes/apps/knative-serving/knative-serving/ks.yaml
+++ b/kubernetes/apps/knative-serving/knative-serving/ks.yaml
@@ -10,8 +10,8 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
-    - name: istiod
-      namespace: istio-system
+    - name: dex
+      namespace: auth
   interval: 1h
   path: ./kubernetes/apps/knative-serving/knative-serving/app
   prune: true
