--- a/kubernetes/apps/kubeflow/katib/ks.yaml
+++ b/kubernetes/apps/kubeflow/katib/ks.yaml
@@ -10,6 +10,8 @@ spec:
     labels:
       app.kubernetes.io/name: *app
   dependsOn:
+    - name: mariadb
+      namespace: database
     - name: kubeflow-gateway
       namespace: kubeflow
   interval: 1h
